app/stylesheets/partials/_timetable.scss
#timetable_date {
  @include column(20, true);
  a {
    color: #333;
    text-decoration: none;
    font-size: 13px;
    font-weight: bold;    
  }  
  #previous_week {
    @include prepend(1);
    @include column(6);
    margin-top: 10px;
  }
  #calendar {
    @include column(10);
  }
  #next_week {
    @include column(3, true);
    margin-top: 10px;
  }
}

#hours {
  @include prepend-top(18px);
  @include column(1);
  .hour {
    height: 72px;
    text-align: top;
  }
}
#tt_day {
  @include column(3);
  background-image: url('../../images/timetable_grid.png');
  background-position: 0 18px;
  height: 964px;
}

#tt_day,#hours {
  h2 {
    font-size: 13px;
    font-weight: bold;
    margin: 0;   
  }
}

#tt_day {
  h2 {
    background-color: #fff;    
    border: 1px $border-color solid;
    text-align: center;
  }
}

#timetable{
  @include column(20);
  margin-bottom: 10px;
}

.timetable_event {
  @include column(3);
  @include border-radius(5px);
  @include box-shadow;
  position: relative;
  background-color: #C9D6F5;
  overflow: hidden;
  text-align: left;
  font-size: 10px!important;
  @include opacity(.85);
  .inner {
    margin: 3px;
  }
  .inner {
    line-height: 1.2em;
    .course_title {
      font-size: 11px;
      font-weight: bold;
      margin-bottom: 5px;
    }
    .rooms {
      margin: 2px 0px;
    }
    .teachers {
      font-style: italic;
    }
  }
  &.extended {
    @include column(5);
    z-index: 1000;
    @include box-shadow(#666666, 7px, 7px);
  }
  &.generic_mark_Y {
    background-color: #84E88B;
    .mark{
      color: #2E7832;
    }    
  }
  &.generic_mark_N {
    background-color: #ffcccc;
    .mark{
      color: #E32424;    
    }
  }
  &.generic_mark_S {
    background-color: #F0B837;
    .mark{
      color: #BF6702;    
    }    
  }
}
.mark {
  @include column(1);
  font-size: 45px;
  font-weight: bold;
  height: 35px;
  text-align: right;
  position: absolute;
  bottom: -5px;
  right: 0px;
  z-index: -100;
  @include text-shadow
}

